--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <title> Parallax Website </title>
     </head>
     <body>
@@ -56,7 +57,8 @@
         </header>-->
         <header class="header">
           <nav class="navbar navbar-expand-lg fixed-top py-3">
-              <div class="container"><a href="#" class="navbar-brand text-uppercase font-weight-bold">Transparent Nav</a>
+              <div class="container"><a href="#" class="navbar-brand text-uppercase font-weight-bold"><img src="images/tsf.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                The Sparks Foundation</a>
                   <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button>
                   
                   <div id="navbarSupportedContent" class="collapse navbar-collapse">
@@ -125,5 +127,7 @@
                 </span>
             </div>
         </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
     </body>
 </html>
