--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                     <div class="p1text">Let's build the better </div>
                     <div class="p1text" id="text1">world together</div>
                     <a href="https://rzp.io/l/MR2yza4SG"><button type="button" class="btn btn-danger">Donate now</button></a>
-                    <a href="#h21"><button type="button" class="btn btn-outline-danger">Read More</button></a>
+                    <a href="#sec1"><button type="button" class="btn btn-outline-danger">Read More</button></a>
             </div>
             
         </div>
-        <section class="section section-light">
+        <section class="section section-light" id="sec1">
             <h2 id="h21">About</h2>
             <p id="p1">
               The Sparks Foundation is a humanitarian aid organization, active in all states and more than 80 countries, with a mission to improve the health and lives of people affected by poverty or emergencies – without regard to politics, religion, or ability to pay. The Sparks Foundation's assistance programs are tailored to the particular circumstances and needs of the world's most vulnerable and at-risk populations. This tradition of direct and targeted assistance, provided in a manner that respects and involves the people served, has been a hallmark of the organization. ongovernmental, nonsectarian, and not-for-profit, The Sparks Foundation relies entirely on private contributions to advance its mission and perform a wide range of functions.
