--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                   <div id="navbarSupportedContent" class="collapse navbar-collapse">
                       <ul class="navbar-nav ms-auto">
                           <li class="nav-item active"><a href="#" class="nav-link text-uppercase font-weight-bold">Home <span class="sr-only">(current)</span></a></li>
-                          <li class="nav-item"><a href="#h21" class="nav-link text-uppercase font-weight-bold">About</a></li>
-                          <li class="nav-item"><a href="#work" class="nav-link text-uppercase font-weight-bold">Work</a></li>
-                          <li class="nav-item"><a href="#mission" class="nav-link text-uppercase font-weight-bold">Mission</a></li>
+                          <li class="nav-item"><a href="#sec1" class="nav-link text-uppercase font-weight-bold">About</a></li>
+                          <li class="nav-item"><a href="#sec2" class="nav-link text-uppercase font-weight-bold">Work</a></li>
+                          <li class="nav-item"><a href="#sec3" class="nav-link text-uppercase font-weight-bold">Mission</a></li>
                           <li class="nav-item"><a href="#connect" class="nav-link text-uppercase font-weight-bold">Get Involved</a></li>
                       </ul>
                   </div>
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <section class="section section-dark">
+        <section class="section section-dark" id="sec2">
             <h2 class="hst" id="work">Work</h2>
             <p id="p2">
               The Sparks Foundation works to equip health professionals in resource-poor communities to meet the challenges of diagnosing and caring for people in need. Every day, The Sparks Foundation prepares the most vulnerable communities worldwide for more frequent, more destructive emergencies. And when disasters strike, TSF responds fast, effectively, and efficiently to get medical resources where they need to be to save lives. Some of our works include identifying key local providers of health services; working to identify the unmet needs of people in the low-resource areas; mobilizing essential medicines, supplies, and equipment that are requested and appropriate for the circumstances; and managing the many details inherent in storing, transporting, and distributing such resources to organizations in the most efficient manner possible.
@@ -72,7 +72,7 @@
             </div>
         </div>
 
-        <section class="section section-dark">
+        <section class="section section-dark" id="sec3">
             <h2 class="hst" id="mission">Mission</h2>
             <p id="p3">
               We will be honest. We won’t make promises we can’t keep, and we will keep the promises that we’ve made. We seek to assist other individuals and organizations that share our common vision. We will endeavor to pioneer new ways of meeting the needs of others, being stewards of our resources and solving problems—from the small inconveniences to the major obstacles. Despite the fact that most of our assets are donations, we will remember the source and value of these and treat each as a gift. We will do our best work in meeting the needs of one another, our donors, our partners, and the sick and dying around the world.
